# Voice-Recorder

./: README.md  pyproject.toml
voice-recorder/: __main__.py
voice-recorder/recording/: record.py
voice_recorder/: __main__.py
voice_recorder/Controller/: controller.py
voice_recorder/Model/: record.py
voice_recorder/Record/: record.py
voice_recorder/View/: recording_view.py
voice_recorder/Views/: recording_view.py
